--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
   "name": "covid-19-estimator-js",
-  "homepage": "https://thierrysion.github.io/covid-19-estimator-js",
   "version": "1.0.0",
   "repository": "git@github.com:BuildforSDG-Cohort1-Assessment/covid-19-estimator-js.git",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "predeploy": "npm run build",
-	"deploy": "gh-pages -b gh_pages -d build",
-    "lint": "eslint ./src/",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint ./src/"
   },
   "dependencies": {
-    "gh-pages": "^2.2.0",
-    "on-covid-19": "^0.1.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "on-covid-19": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
+    "babel-jest": "^25.2.0",
+    "jest": "^25.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1"
